--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,27 @@
+/* Global variables and widely spreaded settings */
 :root
 {
     --default-threshold: min(2vw, 2vh);
+    --default-width: min(50vw, 50vh);
+    --whiteish: #e4e4e4;
+    --globalgrey: #171d2b;
+    --playerOneColor: #3fd683;
+    --playerTwoColor: #1769db;
+}
+*
+{
+    font-family: fantasy;
+    color: var(--whiteish);
+}
+body
+{
+    height: 100vh;
+    margin: 0;
+    background: linear-gradient(var(--globalgrey), rgb(66, 35, 53)) no-repeat;
 }
 
+
+/* top level container keeping anything*/
 .container
 {
     display: flex;
@@ -10,17 +29,58 @@
     flex-direction: column;
 }
 
-.grid
+/* Heading, the two phrases, the player-bar*/
+h1
 {
-    height: min(70vh, 70vw);
-    width: min(70vh, 70vw);
-    display: grid;
-    /* Repeat is a convenient way of not having to write things many times */
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    
+    font-size: 3em;
+    margin-top: calc(2.5 *var(--default-threshold));
+}
+p
+{
+    margin: var(--default-threshold);
+    font-size: 1.2em;
+    padding: 0;
+}
+.player-bar
+{
+    position: relative;
+    width: var(--default-width);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: var(--default-threshold);
+}
+.block
+{
+    --square-size: min(6vw, 6vh);
+    margin: 2.5em;
+    width: var(--square-size);
+    height: var(--square-size);
+    position: absolute;
+    border-radius: 50%;
+    border: 1px solid black; 
+}
+#blockone
+{
+    left: 0;
+    background: var(--playerOneColor);
+}
+#blocktwo
+{
+    background: var(--playerTwoColor);
+    right: 0;
 }
 
+/* The tic tac toe grid and its components */
+.grid
+{
+    height: var(--default-width);
+    width: var(--default-width);
+    margin: var(--default-threshold);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
 .grid-item
 {
     margin: 0.5em;
@@ -28,42 +88,54 @@
     display: flex;  
     justify-content: center;
     align-items: center;
-    transition: 0.4s ease;
+    background: var(--whiteish);
 }
 .selectable
 {
-    transition: 0.4s ease;
+    transition: background 0.4s ease;
 }
     .selectable:hover
     {
-        background: rgba(0, 0, 0, 0.254);
+        background: rgba(0, 0, 0, 0.25);
     }
+.playerOne
+{
+    background: var(--playerOneColor);
+    border-radius: 1em;
+    
+}
+.playerTwo
+{
+    background: var(--playerTwoColor);
+    border-radius: 1em;
+}
 
-    .playerOne
-    {
-        background: #68d89b;
-        border-radius: 1em;
-        
-    }
-
-    .playerTwo
-    {
-        background: #1d3557;
-        border-radius: 1em;
-    }
-
-#customButton
+/* The button bar at the very bottom */
+.button-bar
+{
+    display: flex;
+    flex-direction: row;
+}
+.customButton
 {
     margin: var(--default-threshold);
     border: clamp(1px, 1px, 5px) solid black;
     padding: var(--default-threshold);
-    border-radius: 1em 0 1em 0;
+    border-radius: 0.75em 0 0.75em 0;
+    background: var(--globalgrey);
     transition: 0.25s ease;
-    font-family: fantasy;
     font-size: 1.5em;
-
+    text-align: center;
+    width: 6.5em;
+    opacity: 0.5;
+    transition: 0.5s ease;
 }
-    #customButton:hover
+.enabled
+{
+    transition: background 0.5s ease;
+    opacity: 1;
+}
+    .enabled:hover
     {
         background: #94a7c452;
     }
