--- a/src/styles.css
+++ b/src/styles.css
@@ -184,7 +184,7 @@ p
     border: clamp(1px, 1px, 5px) solid black;
     padding: var(--default-threshold);
     border-radius: 0.75em 0 0.75em 0;
-    font-size: 1.5em;
+    font-size: calc(2 * var(--default-threshold));
     text-align: center;
     opacity: 0.5;
     transition: 0.5s ease;
